tests/e2e/unary_complexb.story
b = 1
a = not b
